[workspace]
members = ["qcp", "qcp-unsafe-tests", "xtask"]
resolver = "2"
package.edition = "2024"

[workspace.dependencies]
anstyle = { version = "1.0.13", default-features = false }
anyhow = "1.0.100"
cfg-if = "1.0.3"
clap = { version = "4.5.48", features = ["wrap_help", "derive", "cargo", "string", "deprecated"] }
colorchoice = "1.0.4"
console = { version = "0.16.1" }
littertray = "1.0.0"
rusty-fork = "0.3.0"
tempfile = { version = "3.23.0", default-features = false }
tokio = { version = "1.47.1", default-features = true, features = [
    "fs",
    "io-std",
    "macros",
    "process",
    "rt",
    "time",
    "sync",
] }

#[profile.dev]
#split-debuginfo="unpacked"
# This is not supported on windows msvc; set CARGO_PROFILE_DEV_SPLIT_DEBUGINFO=unpacked in environment instead.

[profile.release]
lto = "thin"
strip = "symbols"
