[workspace]
members = ["qcp", "qcp-unsafe-tests", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anstyle = { version = "1.0.13", default-features = false }
anyhow = "1.0.101"
assertables = "9.8.4"
async-trait = "0.1.89"
bytes = "1.11.1"
cargo_toml = "0.22.3"
cfg-if = "1.0.4"
cfg_aliases = "0.2.1"
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5.57", features = ["wrap_help", "derive", "cargo", "string", "deprecated"] }
clap-markdown = "0.1.5"
clap_mangen = "0.2.31"
colorchoice = "1.0.4"
console = { version = "0.16.2" }
derive-deftly = "1.6.0"
derive_more = "2.1.1"
dirs = "6.0.0"
document-features = "0.2.12"
dtype_variant = "=0.0.14"
dunce = "1.0.5"
either = "1.15.0"
engineering-repr = "1.1.1"
enumscribe = "0.4.0"
figment = "0.10.19"
file-mode = "0.1.2"
flate2 = "1.1.9"
futures-util = { version = "0.3.31", default-features = false }
gethostname = "1.1.0"
glob = "0.3.3"
heck = "0.5.0"
hex = "0.4.3"
homedir = "0.3.6"
human-repr = "1.1.0"
indicatif = "0.18.3"
int-enum = "1.2.0"
jzon = "0.12.5"
lessify = "0.5.0"
libc = "0.2.180"
littertray = "1.1.0"
mimalloc = "0.1.48"
mockall = "0.14.0"
num-format = "0.4.4"
num-traits = "0.2.19"
paste = "1.0.15"
pico-args = "0.5.0"
pretty_assertions = "1.4.1"
qcp = { path = "qcp" }
quinn = { version = "0.11.9", default-features = false }
rcgen = "0.14.7"
roff = "0.2.2"
rstest = "0.26.1"
rustix = "1.1.3"
rustls = { version = "0.23.36", default-features = false }
rustls-pki-types = "1.14.0"
rusty-fork = "0.3.1"
serde = "1.0.228"
serde_bare = "0.5.0"
serde_json = "1.0.149"
serde_repr = "0.1.20"
static_assertions = "1.1.0"
static_str_ops = "0.1.2"
struct-field-names-as-array = "0.3.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tabled = "0.20.0"
tempfile = { version = "3.24.0", default-features = false }
termsize = "0.1.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = true, features = ["fs", "io-std", "macros", "process", "rt", "time", "sync"] }
tokio-test = "0.4.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
wildmatch = "2.6.1"
x509-certificate = "0.25.0"
xshell = "0.2.7"

# [profile.dev]
# split-debuginfo="unpacked"
# This is not supported on windows msvc; set CARGO_PROFILE_DEV_SPLIT_DEBUGINFO=unpacked in environment instead.

[profile.release]
lto = "thin"
strip = "symbols"
