[package]
name = "qcp-unsafe-tests"
version = "0.0.0"
edition.workspace = true
license = "MIT"           # Note this license applies only to qcp-unsafe-tests, not to qcp itself.
publish = false

[dev-dependencies]
qcp = { path = "../qcp" }

anstream = { workspace = true }
anstyle = { workspace = true }
assertables = "9.8.1"
cfg-if = { workspace = true }
colorchoice = { workspace = true }
console = { workspace = true }
dunce = "1.0.5"
littertray = { workspace = true }
pretty_assertions = "1.4.1"
rusty-fork = { workspace = true }
static_str_ops = "0.1.2"
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
anyhow.workspace = true
