[package]
name = "qcp-unsafe-tests"
version = "0.0.0"
edition.workspace = true
license = "MIT" # Note this license applies only to qcp-unsafe-tests, not to qcp itself.
publish = false

[dev-dependencies]
qcp = { workspace = true, features = ["unstable-test-helpers"] }

anstyle = { workspace = true }
colorchoice = { workspace = true }
console = { workspace = true }
dunce = { workspace = true }
littertray = { workspace = true, features = ["async"] }
pretty_assertions = { workspace = true }
rusty-fork = { workspace = true }
static_str_ops = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.178"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
