[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
authors = ["Ross Younger <qcp@crazyscot.com>"]
license = "MIT"                                # Note this license applies only to xtask, not to qcp itself.
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_toml = "0.22.1"
chrono = { version = "0.4.40", default-features = false, features = ["now"] }
flate2 = "1.1.0"
pico-args = "0.5.0"
xshell = "0.2.7"
