[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
authors = ["Ross Younger <qcp@crazyscot.com>"]
license = "MIT"                                # Note this license applies only to xtask, not to qcp itself.
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_toml = "0.22.3"
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
flate2 = "1.1.5"
pico-args = "0.5.0"
xshell = "0.2.7"
