[package]
name = "xtask"
version = "0.0.0"
authors = ["Ross Younger <qcp@crazyscot.com>"]
edition.workspace = true
license = "MIT" # Note this license applies only to xtask, not to qcp itself.
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_toml = { workspace = true }
chrono = { workspace = true, features = ["now"] }
flate2 = { workspace = true }
pico-args = { workspace = true }
xshell = { workspace = true }
